fixed bug in IE where expansion titles are too large

--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,9 @@ html, body {
     min-height:9em;
 }
 
+#cards .expansion h1 {
+    font-size:1.5em;
+}
 
 #form label {
     display:block;
